--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,10 @@ jobs:
       - checkout
       - python/install-packages:
           pkg-manager: pip
+      - run:
+        name: Test
+        command: pytest -v
 workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
+  sample: 
     jobs:
       - build
